# easy-shortcuts

./: .gitignore  Cargo.toml  readme.md
examples/: all_paths.rs  crate.rs  debug.rs  lines.rs  paths.rs  read_all.rs  run-test.rs  runner.rs
src/: lib.rs
